--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,14 @@
 body {
     font-family: 'Raleway', sans-serif;
     font-family: 'Roboto', sans-serif;
-    width: 1600px;
     margin: 0px;
     background: #ffffff;
 }
 
 .page-header{
     background: #ffffff;
+    padding-top: 24px;;
+    padding-bottom: 25px;
 } 
 
 .container{
@@ -25,8 +26,6 @@ body {
 
 .page-nav{
     display: flex;
-    margin-top: 24px;
-    margin-bottom: 25px;
 }
 
 .logo{
@@ -51,8 +50,6 @@ font-size: 26px;
     display: flex;
     align-items:center;
     list-style: none;
-
-   
 }
 
 .page-header-contact-container {
@@ -87,7 +84,7 @@ font-size: 26px;
     margin-bottom: 32px;
     display: flex;
     align-items:center;
-margin-left: auto;
+    margin-left: auto;
     }
 
     .menu-item-contact{
@@ -121,7 +118,8 @@ display: flex;
 }
 
 .hero{
-    height: 600px;
+    padding-top:200px ;
+    padding-bottom: 200px;
     background: #2F303A;
     }
 
@@ -135,10 +133,10 @@ display: flex;
         text-transform: uppercase;
         color: #FFFFFF;
        align-items:center;
-       padding-top: 200px ;
-       padding-left: 252px;
-       padding-right: 252px;
-       padding-bottom: 280px;
+       margin-left: 252px;
+       margin-right: 252px;
+       margin-bottom: 30px;
+
     }
 
 .modal-btn{
@@ -149,9 +147,7 @@ display: flex;
     letter-spacing: 0.06em;
     color: #FFFFFF;
     background: #188CE8;
-    position: absolute;
     padding: 10px 32px;
-    width: 200px;
     height: 50px;
     left: 700px;
     top: 400px;
@@ -161,6 +157,8 @@ display: flex;
     border-radius: 4px;
     border: none;
     align-items: center;
+    display: block;
+    margin: auto;
 }
 
 .modal-btn:hover,
@@ -199,7 +197,7 @@ font-family: 'Roboto', sans-serif;
 font-style: normal;
 font-weight: 700;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #212121;
@@ -213,7 +211,7 @@ font-family: 'Roboto', sans-serif;
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
-line-height: 24px;
+line-height: 1.71;
 letter-spacing: 0.03em;
 color: #757575;
 }
@@ -231,7 +229,7 @@ justify-content: space-between;
 font-family: 'Roboto', sans-serif;
 font-weight: 700;
 font-size: 36px;
-line-height: 42px;
+line-height: 1.16;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
@@ -251,7 +249,6 @@ margin-right: 30px;
     margin-right: 0;}
 
 .our-team{
-width: 1600px;
 background: #F5F4FA;
 padding-top: 94px;
 padding-bottom: 94px;
@@ -263,11 +260,11 @@ justify-content: space-between;
 font-family: 'Roboto', sans-serif;
 font-weight: 700;
 font-size: 36px;
-line-height: 1.16px;
+line-height: 1.16;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
-padding-bottom: 50px;
+margin-bottom: 50px;
 }
 
 .our-team-list{
@@ -289,6 +286,13 @@ border-radius: 0px 0px 4px 4px;
 .our-team-card:last-child {
     margin-right: 0;}
 
+    .card-info{
+    padding-left: 59px;
+    padding-bottom: 30px;
+    padding-top: 30px;
+    padding-right: 59px;
+        
+    }
 .card-title
 {
     font-family: 'Roboto', sans-serif;
@@ -298,87 +302,79 @@ border-radius: 0px 0px 4px 4px;
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
-.card-info{
+.card-prof{
 font-family: 'Roboto', sans-serif;
 font-size: 16px;
-line-height: 19px;
+line-height: 1.18;
 text-align: center;
 letter-spacing: 0.03em;
 color: #757575;
-margin-top: 10px;
-margin-bottom: 30px;
 }
 
 .footer{
-    width: 1600px;
-    height: 252px;
     background: #2F303A;
-}
-
-.footer-box-logo{
     padding-top: 60px;
-}
-
-.logo-link{
-    font-family: 'Raleway',sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    color: #FFFFFF;
-    margin-bottom: 20px;
+    padding-bottom: 60px;
+ }
+ 
+ .logo-link{
+     font-family: 'Raleway',sans-serif;
+     font-weight: 700;
+     font-size: 26px;
+     line-height: 1.2;
+     letter-spacing: 0.03em;
+     color: #FFFFFF;
+     margin-bottom: 20px;
+     
+     }
+ 
+ .footer-address{
+     margin-top: 20px;
+     margin-bottom: 9px;
     
-    }
-
-.footer-address{
-    margin-top: 20px;
-    margin-bottom: 9px;
-   
-}  
-
-
-.location{
-font-family: 'Roboto', sans-serif;
-font-style: normal;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-color: #FFFFFF;
-
-}
-
-.contact-footer{
-    margin-bottom: 9px;
-}
-
-.contact-email {
-width: 231px;
-height: 21px;
-left: 215px;
-top: 2238px;
-font-family: 'Roboto', sans-serif;
-font-style: normal;
-font-size: 14px;
-letter-spacing: 0.03em;
-color: rgba(255, 255, 255, 0.6);
-
-}
-
-.contact-phone{
-width: 231px;
-height: 21px;
-left: 215px;
-top: 2238px;
-font-family: 'Roboto', sans-serif;
-font-style: normal;
-font-size: 14px;
-letter-spacing: 0.03em;
-color: rgba(255, 255, 255, 0.6);
-padding-bottom: 60px;
-}
+ }  
+ 
+ 
+ .location{
+ font-family: 'Roboto', sans-serif;
+ font-style: normal;
+ font-size: 14px;
+ line-height: 1.71;
+ letter-spacing: 0.03em;
+ color: #FFFFFF;
+ 
+ }
+ 
+ .contact-footer{
+     margin-bottom: 9px;
+ }
+ 
+ .contact-email {
+ width: 231px;
+ height: 21px;
+ left: 215px;
+ top: 2238px;
+ font-family: 'Roboto', sans-serif;
+ font-style: normal;
+ font-size: 14px;
+ letter-spacing: 0.03em;
+ color: rgba(255, 255, 255, 0.6);
+ }
+ 
+ .contact-phone{
+ width: 231px;
+ height: 21px;
+ left: 215px;
+ top: 2238px;
+ font-family: 'Roboto', sans-serif;
+ font-style: normal;
+ font-size: 14px;
+ letter-spacing: 0.03em;
+ color: rgba(255, 255, 255, 0.6);
+ }
 
 .link {
     text-decoration:none;
